--- a/samples/hello.html
+++ b/samples/hello.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Coffee Pot: Hello, world!</title>
-    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="coffeepot.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="../lib/coffeepot.js"></script>
     <script>
 $(document).ready(function() {
 
