--- a/samples/shopping.html
+++ b/samples/shopping.html
@@ -14,8 +14,8 @@ div.red {
   font-weight: bold;
 }
     </style>
-    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="coffeepot.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="../lib/coffeepot.js"></script>
     <script type="text/javascript">
 $(document).ready(function() {
 
