Update ViewModel data-binding action.

--- a/samples/hello.html
+++ b/samples/hello.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
   var Model = {
 
     createMessage: function(name) {
-      return  name != '' ? 'Hello, {0}!'.tmpl(name) : '';
+      return  name !== '' ? 'Hello, {0}!'.tmpl(name) : '';
     }
   };
 
