Add Coffee Pot logo.

--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> Coffee Pot</title>
+    <title> ![Coffee Pot](docs/images/CoffeePot-32.png) Coffee Pot ![Coffee Pot](docs/images/CoffeePot-32.png)</title>
     <style type="text/css">
 body {
   margin: 0.5em 0.5em 0.5em 0.5em;
@@ -179,7 +179,7 @@ li {
 }</style>
   </head>
   <body>
-<h1 id="coffee-pot">Coffee Pot</h1>
+<h1 id="-coffee-pot-docs-images-coffeepot-32-png-coffee-pot-coffee-pot-docs-images-coffeepot-32-png-"><img src="docs/images/CoffeePot-32.png" alt="Coffee Pot"> Coffee Pot <img src="docs/images/CoffeePot-32.png" alt="Coffee Pot"></h1>
 <p>Coffee PotはJavaScript用MVVMフレームワークです。</p>
 <p>以下の特徴を持ちます。</p>
 <ul>
@@ -189,7 +189,9 @@ li {
 </ul>
 <h2 id="インストール">インストール</h2>
 <pre><code>$ git clone git://github.com/keisuken/coffeepot.git
-</code></pre><h2 id="mvvmパターン">MVVMパターン</h2>
+</code></pre><h2 id="必要なライブラリ">必要なライブラリ</h2>
+<p>jQueryが必要です。レポジトリの中に含まれています。</p>
+<h2 id="mvvmパターン">MVVMパターン</h2>
 <p>MVVMはView, ViewModel, Modelの3つにわかれ、それぞれ見た目、見た目に対する操作、ビジネスロジックを担当します。</p>
 <p><img src="docs/images/MVVM.png" alt="MVVMパターン" title="MVVMパターン"></p>
 <table>
