Add Coffee Pot logo @ README.md.

--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> ! Coffee Pot</title>
+    <title> Coffee Pot</title>
     <style type="text/css">
 body {
   margin: 0.5em 0.5em 0.5em 0.5em;
@@ -179,8 +179,8 @@ li {
 }</style>
   </head>
   <body>
-<h1 id="-coffee-pot">! Coffee Pot</h1>
-<p><a href="docs/images/CoffeePot-64.png">Logo</a></p>
+<h1 id="coffee-pot">Coffee Pot</h1>
+<p><img src="docs/images/CoffeePot-64.png" alt="Logo" title="Logo"></p>
 <p>Coffee PotはJavaScript用MVVMフレームワークです。</p>
 <p>以下の特徴を持ちます。</p>
 <ul>
